k8s/ai.service.yml
kind: Service
apiVersion: v1
metadata:
  name: ai-service
  labels:
    app: ai
spec:
  selector:
    app: ai
  type: ClusterIP
  ports:
  - name: ai-http
    port: 80
    targetPort: 3000
