k8s/auth.service.yml
kind: Service
apiVersion: v1
metadata:
  name: auth-service
  labels:
    app: auth
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - name: auth-http
    port: 80
    targetPort: 3000
