k8s/backend.service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - name: backend-http
    port: 80
    targetPort: 4000
